@@ -1,3 +1,8 @@
+2004-11-15  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b273
+
+	* Change: Allow session-sharing in devMode so that pages 
+	  can be validated using the W3 validation links
+
 2004-11-12  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b272
 
 	* Change: Never put case statements after default ... dur.  My bad.
